third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/datetime/mday-over.stderr
TOML parse error at line 3, column 13
  |
3 | d = 2006-01-32T00:00:00-00:00
  |             ^
invalid date-time
value is out of range
